# music-player

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  FindFFmpeg.cmake  FindPortAudio.cmake
docs/: architecture.md  audio-pipeline.md  build-system.md  database-schema.md  git-commit-conventions.md  i18n.md  project-overview.md  project-structure.md  todo.md
resources/translations/: musicplayer_zh_CN.ts
scripts/: format.sh  tidy.sh
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  language_manager.cpp  language_manager.h  lyric_manager.cpp  lyric_manager.h  player_controller.cpp  player_controller.h  playlist_manager.cpp  playlist_manager.h
src/common/: CMakeLists.txt  constants.h
src/domain/: CMakeLists.txt  audio_decoder_info.cpp  audio_decoder_info.h  audio_engine.cpp  audio_engine.h  audio_extensions.h  iaudio_decoder.cpp  iaudio_decoder.h  iaudio_output.cpp  iaudio_output.h  lyric_matcher.cpp  lyric_matcher.h  lyric_parser.cpp  lyric_parser.h  music_scanner.cpp  music_scanner.h  play_queue.cpp  play_queue.h  playlist.h  playlist_model.cpp  playlist_model.h  ring_buffer.cpp  ring_buffer.h  song_info.cpp  song_info.h
src/infra/: CMakeLists.txt  config_paths.cpp  config_paths.h  cover_cache.cpp  cover_cache.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  library_importer.cpp  library_importer.h  metadata_extractor.cpp  metadata_extractor.h  player_state_repo.cpp  player_state_repo.h  portaudio_output.cpp  portaudio_output.h  sqlite_database.cpp  sqlite_database.h  sqlite_play_history_repo.cpp  sqlite_play_history_repo.h  sqlite_playlist_repo.cpp  sqlite_playlist_repo.h  sqlite_settings_repo.cpp  sqlite_settings_repo.h  sqlite_song_repo.cpp  sqlite_song_repo.h
src/ui/: CMakeLists.txt  control_bar.cpp  control_bar.h  cover_widget.cpp  cover_widget.h  lyric_widget.cpp  lyric_widget.h  main_window.cpp  main_window.h  new_playlist_dialog.cpp  new_playlist_dialog.h  playlist_sidebar.cpp  playlist_sidebar.h  playlist_widget.cpp  playlist_widget.h  settings_dialog.cpp  settings_dialog.h  song_table_model.cpp  song_table_model.h
testdata/: sample.lrc
tests/: CMakeLists.txt  qt_test_main.cpp  qt_widget_test_main.cpp
tests/app/: test_language_manager.cpp  test_lyric_manager.cpp  test_player_controller.cpp  test_playlist_manager.cpp
tests/domain/: test_lyric_matcher.cpp  test_lyric_parser.cpp  test_music_scanner.cpp  test_play_queue.cpp  test_ring_buffer.cpp
tests/infra/: test_config_paths.cpp  test_cover_cache.cpp  test_ffmpeg_decoder.cpp  test_library_importer.cpp  test_metadata_extractor.cpp  test_player_state_repo.cpp  test_sqlite_database.cpp  test_sqlite_play_history_repo.cpp  test_sqlite_playlist_repo.cpp  test_sqlite_settings_repo.cpp  test_sqlite_song_repo.cpp
tests/integration/: test_audio_pipeline.cpp
tests/ui/: test_control_bar.cpp  test_cover_widget.cpp  test_lyric_widget.cpp  test_new_playlist_dialog.cpp  test_playlist_sidebar.cpp  test_settings_dialog.cpp  test_song_table_model.cpp
